--- a/apps/angular/mfeinfo/project.json
+++ b/apps/angular/mfeinfo/project.json
@@ -6,74 +6,6 @@
   "sourceRoot": "apps/angular/mfeinfo/src",
   "tags": [],
   "targets": {
-    "build": {
-      "executor": "@nx/angular:webpack-browser",
-      "outputs": ["{options.outputPath}"],
-      "options": {
-        "outputPath": "dist/apps/angular/mfeinfo",
-        "index": "apps/angular/mfeinfo/src/index.html",
-        "main": "apps/angular/mfeinfo/src/main.ts",
-        "polyfills": ["zone.js"],
-        "tsConfig": "apps/angular/mfeinfo/tsconfig.app.json",
-        "inlineStyleLanguage": "scss",
-        "assets": [
-          {
-            "glob": "**/*",
-            "input": "apps/angular/mfeinfo/public"
-          }
-        ],
-        "styles": ["apps/angular/mfeinfo/src/styles.scss"],
-        "scripts": [],
-        "customWebpackConfig": {
-          "path": "apps/angular/mfeinfo/webpack.config.ts"
-        }
-      },
-      "configurations": {
-        "production": {
-          "budgets": [
-            {
-              "type": "initial",
-              "maximumWarning": "500kb",
-              "maximumError": "1mb"
-            },
-            {
-              "type": "anyComponentStyle",
-              "maximumWarning": "4kb",
-              "maximumError": "8kb"
-            }
-          ],
-          "outputHashing": "all",
-          "customWebpackConfig": {
-            "path": "apps/angular/mfeinfo/webpack.prod.config.ts"
-          }
-        },
-        "development": {
-          "buildOptimizer": false,
-          "optimization": false,
-          "vendorChunk": true,
-          "extractLicenses": false,
-          "sourceMap": true,
-          "namedChunks": true
-        }
-      },
-      "defaultConfiguration": "production"
-    },
-    "serve": {
-      "executor": "@nx/angular:dev-server",
-      "options": {
-        "port": 4205,
-        "publicHost": "http://localhost:4205"
-      },
-      "configurations": {
-        "production": {
-          "buildTarget": "mfeinfo:build:production"
-        },
-        "development": {
-          "buildTarget": "mfeinfo:build:development"
-        }
-      },
-      "defaultConfiguration": "development"
-    },
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
       "options": {
@@ -105,6 +37,11 @@
         "production": {
           "buildTarget": "mfeinfo:build:production"
         }
+      }
+    },
+    "serve": {
+      "options": {
+        "port": 4205
       }
     }
   }
