--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "@angular/platform-browser": "~19.2.0",
     "@angular/platform-browser-dynamic": "~19.2.0",
     "@angular/router": "~19.2.0",
+    "@nx/angular": "20.8.1",
     "rxjs": "~7.8.0",
-    "zone.js": "~0.15.0",
-    "@nx/angular": "20.8.1"
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~19.2.0",
@@ -25,14 +25,20 @@
     "@angular/language-service": "~19.2.0",
     "@eslint/js": "^9.8.0",
     "@module-federation/enhanced": "^0.9.0",
+    "@nx/angular-rspack": "~20.6.1",
     "@nx/eslint": "20.8.1",
     "@nx/eslint-plugin": "20.8.1",
     "@nx/jest": "20.8.1",
     "@nx/js": "20.8.1",
     "@nx/module-federation": "20.8.1",
+    "@nx/rspack": "20.8.1",
     "@nx/web": "20.8.1",
     "@nx/webpack": "20.8.1",
     "@nx/workspace": "20.8.1",
+    "@rspack/cli": "1.2.2",
+    "@rspack/core": "1.2.2",
+    "@rspack/dev-server": "1.0.9",
+    "@rspack/plugin-react-refresh": "^1.0.0",
     "@schematics/angular": "~19.2.0",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
@@ -48,6 +54,7 @@
     "jest-preset-angular": "~14.4.0",
     "nx": "20.8.1",
     "prettier": "^2.6.2",
+    "react-refresh": "~0.14.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
